--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mongodb": "^3.1.13",
     "mongoose": "^5.4.14",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
