--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.14",
@@ -14,7 +15,7 @@
     "react-scripts": "2.1.5"
   },
   "scripts": {
-    "start-js": "react-scripts start",
+    "start-js": "concurrently \"cd backend && node server.js\" \"react-scripts start\"",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
     "build-css": "node-sass-chokidar src/ -o src/",
